[Refactoring] cleanup ActivityConfigItem * removed `activityType`, since we can already get it from the ActivityExcel * removed unused `meetCondList` * added `condForceActiveList` and `condForceDisabledList` to allowing condtions to be forced active or disabled